# PocketTanksAccessor

./: .gitignore  README.md  pom.xml
lib/ptanks_access_library/: CMakeLists.txt
lib/ptanks_access_library/src/: com_wniemiec_cheat_ptanks_PocketTanksAccessor.c  com_wniemiec_cheat_ptanks_PocketTanksAccessor.h  ptanks_memory_accessor.c  ptanks_memory_accessor.h
src/main/java/com/wniemiec/cheat/: App.java
src/main/java/com/wniemiec/cheat/logic/: CheatContext.java  LearningVector.java  PocketTanksCheater.java  Serializer.java  UpdateLearningController.java  WindowController.java  update_window.fxml  window.fxml
src/main/java/com/wniemiec/cheat/neural/: ActivationFunction.java  Bias.java  BipolarSigmoidFunction.java  BipolarSigmoidalFunction.java  BipolarValueCompresser.java  BipolarValueCompressor.java  Connector.java  DefaultConnector.java  HiddenLayerGenerator.java  Input.java  InputProperty.java  Inputable.java  Layer.java  Network.java  Neuron.java  PositiveToBipolarValueCompressor.java  SimpleValueCompresser.java  SimpleValueCompressor.java  Synapse.java  ValueCompresser.java  ValueCompressor.java
src/main/java/com/wniemiec/cheat/ptanks/: PocketTanksAccessor.java  Position.java  Tank.java  TankAccessor.java
src/main/java/com/wniemiec/cheat/view/: window.fxml
src/main/resources/: log4j.properties
src/test/java/com/wniemiec/cheat/: AppTest.java
vectors/: Left to right only  new
